--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,24 @@ squid:
   links:
    - web
   volumes_from:
-   - squidlogviewer
-  command: bash -c 'sed -i "s/-d 1/-d 10/" /start ; tail /start; echo "debug_options ALL,1" >>/etc/squid3/squid.conf ; tail /etc/squid3/squid.conf ; /start'
+   - squidlogvolume
 
-squidlogviewer:
+squidlogvolume:
   image: busybox:latest
   volumes:
    - /var/log/squid3
-  command: sh -c 'touch /var/log/squid3.access.log ; tail -f /var/log/squid3/access.log'
+
+squidaccesslog:
+  image: busybox:latest
+  volumes_from:
+   - squidlogvolume
+  command: sh -c 'touch /var/log/squid3/access.log ; tail -f /var/log/squid3/access.log'
+
+squidcachelog:
+  image: busybox:latest
+  volumes_from:
+   - squidlogvolume
+  command: sh -c 'touch /var/log/squid3/cache.log ; tail -f /var/log/squid3/cache.log'
 
 web:
   build: .
