WIP: Flask (Werkzeug) stops responding after max-age timeout exceeded
Basic check with bash:
x=0; while true; do echo $x; curl -sv http://localhost:5000/ ; sleep 10; x=$((x+10)); echo "" ; done

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ squid:
    - web
   volumes_from:
    - squidlogvolume
+  command: bash -c 'echo "debug_options ALL,1" >>/etc/squid3/squid.conf ; tail /etc/squid3/squid.conf ; /start'
 
 squidlogvolume:
   image: busybox:latest
